# bonsai-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci_tests.yml  cmake-multi-platform.yml
applications/: CMakeLists.txt
applications/bonsai-viewer/: CMakeLists.txt
applications/bonsai-viewer/src/: bonsai_viewer.cpp  bonsai_viewer.hpp  entrypoint.cpp
assets/: CornellBox.bonsai  CornellBox.mtl
bonsai/: CMakeLists.txt  bonsai_config.hpp.in
bonsai-core/: CMakeLists.txt  bonsai_config.hpp.in
bonsai-core/include/bonsai/: application.hpp  bonsai_api.hpp  bonsai_export.hpp  engine.hpp  engine_api.hpp  entrypoint.hpp
bonsai-core/include/bonsai/core/: assert.hpp  dylib_loader.hpp  fatal_exit.hpp  logger.hpp  platform.hpp
bonsai-core/include/bonsai/render_backend/: render_backend.hpp
bonsai-core/include/bonsai/systems/: renderer.hpp
bonsai-core/src/: application.cpp  engine.cpp  engine_api.cpp
bonsai-core/src/core/: assert.cpp  dylib_loader_unix.cpp  dylib_loader_win32.cpp  logger.cpp  platform_sdl.cpp
bonsai-core/src/render_backend/: render_backend.cpp  shader_compiler.cpp  shader_compiler.hpp  vulkan_render_backend.cpp  vulkan_render_backend.hpp
bonsai-core/src/render_backend/vulkan/: enum_conversion.cpp  enum_conversion.hpp  spirv_reflector.cpp  spirv_reflector.hpp  vk_check.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_render_commands.cpp  vulkan_render_commands.hpp  vulkan_shader_pipeline.cpp  vulkan_shader_pipeline.hpp  vulkan_texture.cpp  vulkan_texture.hpp
bonsai-core/src/systems/: renderer.cpp
bonsai-core/tests/: sanity.cpp  test_shader_compilation.cpp
bonsai/include/bonsai/: application.cpp  engine.hpp  entrypoint.hpp
bonsai/src/: engine.cpp  engine.hpp  logger.cpp  logger.hpp  main.cpp  platform.hpp  platform_sdl.cpp
bonsai/src/assets/: asset.hpp  asset_cache.cpp  asset_cache.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
bonsai/src/assets/model/: material.cpp  material.hpp
bonsai/src/components/: camera_component.cpp  camera_component.hpp  render_component.cpp  render_component.hpp
bonsai/src/core/: allocator.cpp  allocator.hpp  assert.hpp  die.cpp  die.hpp  logger.cpp  logger.hpp  timer.hpp
bonsai/src/platform/: platform.hpp  platform_sdl.cpp  platform_sdl.hpp  platform_vulkan.hpp  platform_vulkan_sdl.cpp  platform_win32.hpp
bonsai/src/platform/sdl/: platform_sdl.cpp  platform_sdl.hpp  platform_vulkan_sdl.cpp  platform_win32_sdl.cpp
bonsai/src/render_graph/: render_graph.cpp  render_graph.hpp
bonsai/src/rendering/: render_backend.hpp  render_world.cpp  render_world.hpp  renderer.cpp  renderer.hpp
bonsai/src/rendering/vulkan/: render_backend_vulkan.cpp  render_backend_vulkan.hpp  render_world_vulkan.cpp  render_world_vulkan.hpp  renderer_vulkan.cpp  renderer_vulkan.hpp  use_vma.cpp  use_volk.cpp
bonsai/src/rhi/: rhi.hpp  rhi_vulkan.cpp  rhi_vulkan.hpp
bonsai/src/rhi/vulkan/: vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_allocator.cpp  vulkan_command_allocator.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_helpers.hpp  vulkan_swap_chain.cpp  vulkan_swap_chain.hpp  vulkan_texture.cpp  vulkan_texture.hpp
bonsai/src/systems/: renderer.cpp  renderer.hpp  world_manager.hpp
bonsai/src/world/: component.hpp  entity.cpp  entity.hpp  world.cpp  world.hpp  world_manager.cpp  world_manager.hpp
bonsai/tests/: assets_tests.cpp  core_allocator_tests.cpp  platform_sdl_tests.cpp  platform_tests.cpp  render_graph_tests.cpp  renderer_tests.cpp  rhi_tests.cpp  sanity.cpp  world_tests.cpp
bonsai_core/: CMakeLists.txt
bonsai_core/include/core/: die.hpp
bonsai_core/include/platform/: platform.hpp
bonsai_core/src/core/: logger.cpp
bonsai_core/src/platform/sdl/: platform_sdl.cpp
cmake/: extended_warnings.cmake  target_track_dll_dependencies.cmake  track_dll_dependencies.cmake
cmake/modules/: FindDXCompiler.cmake
